Finalizada lógica de extração e processamento

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -99,38 +99,49 @@
     "\t'Log',\n",
     "]\n",
     "\n",
-    "COLS_LICENCIAMENTO = [\n",
-    "\t'Frequência',\n",
-    "\t'Entidade',\n",
-    "\t'Fistel',\n",
-    "\t'Número_Estação',\n",
-    "\t'Município',\n",
-    "\t'Código_Município',\n",
-    "\t'UF',\n",
-    "\t'Latitude',\n",
-    "\t'Longitude',\n",
-    "\t'Classe',\n",
-    "\t'Num_Serviço',\n",
-    "\t'Classe_Emissão',\n",
-    "\t'Largura_Emissão(kHz)',\n",
-    "\t'Validade_RF',\n",
-    "\t'Status',\n",
-    "\t'Fonte',\n",
-    "\t'Multiplicidade',\n",
-    "\t'Potência(W)',\n",
-    "\t'Cod_Tipo_Antena',\n",
-    "\t'Polarização',\n",
-    "\t# \"Raio_Antena\",\n",
-    "\t'Ganho_Antena',\n",
-    "\t'FC_Antena',\n",
-    "\t'Ang_MP_Antena',\n",
-    "\t'Ângulo_Elevação',\n",
-    "\t'Azimute',\n",
-    "\t'Altura_Antena',\n",
-    "\t'Perdas_Acessorias',\n",
-    "\t'Log',\n",
+    "COLS_SRD = COLUNAS + [\n",
+    "\t'Altura_Estação',\n",
+    "\t'Potência_Transmissor(W)',\n",
+    "\t'Ganho_Antena(dBd)',\n",
+    "\t'Ângulo_Elevação_Antena',\n",
+    "\t'Azimute_Antena',\n",
+    "\t'Altura_Antena(m)',\n",
+    "\t'Atenuação_Linha(db/100m)',\n",
+    "\t'Perdas_Acessórias_Linha(db)',\n",
+    "\t'Padrão_Antena(dBd)',\n",
     "]\n",
     "\n",
+    "# COLS_LICENCIAMENTO = [\n",
+    "# \t'Frequência',\n",
+    "# \t'Entidade',\n",
+    "# \t'Fistel',\n",
+    "# \t'Número_Estação',\n",
+    "# \t'Município',\n",
+    "# \t'Código_Município',\n",
+    "# \t'UF',\n",
+    "# \t'Latitude',\n",
+    "# \t'Longitude',\n",
+    "# \t'Classe',\n",
+    "# \t'Num_Serviço',\n",
+    "# \t'Classe_Emissão',\n",
+    "# \t'Largura_Emissão(kHz)',\n",
+    "# \t'Validade_RF',\n",
+    "# \t'Status',\n",
+    "# \t'Fonte',\n",
+    "# \t'Multiplicidade',\n",
+    "# \t'Potência_Transmissor(W)',\n",
+    "# \t'Cod_Tipo_Antena',\n",
+    "# \t'Polarização_Antena',\n",
+    "# \t# \"Raio_Antena\",\n",
+    "# \t'Ganho_Antena',\n",
+    "# \t'FC_Antena',\n",
+    "# \t'Ang_MP_Antena',\n",
+    "# \t'Ângulo_Elevação_Antena',\n",
+    "# \t'Azimute_Antena',\n",
+    "# \t'Altura_Antena',\n",
+    "# \t'Perdas_Acessorias',\n",
+    "# \t'Log',\n",
+    "# ]\n",
     "\n",
     "AGG_LICENCIAMENTO = [\n",
     "\t'Frequência',\n",
@@ -281,17 +292,16 @@
     "\t'NumServico': 'Num_Serviço',\n",
     "\t'DataValFreq': 'Validade_RF',\n",
     "\t'state': 'Status',\n",
-    "\t# \"PotenciaTransmissorWatts\": \"Potência(W)\",\n",
-    "\t# \"CodTipoAntena\": \"Cod_TipoAntena\",\n",
-    "\t# \"Polarizacao\": \"Polarização\",\n",
-    "\t# \"RaioAntena\": \"Raio_Antena\",\n",
-    "\t# \"GanhoAntena\": \"Ganho_Antena\",\n",
-    "\t# \"FrenteCostaAntena\": \"FC_Antena\",\n",
-    "\t# \"AnguloMeiaPotenciaAntena\": \"Ang_MP_Antena\",\n",
-    "\t# \"AnguloElevacao\": \"Ângulo_Elevação\",\n",
-    "\t# \"Azimute\": \"Azimute\",\n",
-    "\t# \"AlturaAntena\": \"Altura_Antena\",\n",
-    "\t# \"PerdasAcessorias\": \"Perdas_Acessorias\",\n",
+    "\t'MedCotaBaseTorre': 'Altura_Estação',\n",
+    "\t'hpat': 'Padrão_Antena(dBd)',\n",
+    "\t'MedPotenciaOperacao': 'Potência_Transmissor(W)',\n",
+    "\t'IndPolariz': 'Polarização_Antena',\n",
+    "\t'MedGMaxdBd': 'Ganho_Antena(dBd)',\n",
+    "\t'MedBeamTilt': 'Ângulo_Elevação_Antena',\n",
+    "\t'MedOrientNV': 'Azimute_Antena',\n",
+    "\t'MedHCI': 'Altura_Antena(m)',\n",
+    "\t'MedAtenLinhaTransmissaodB100m': 'Atenuação_Linha(db/100m)',\n",
+    "\t'PerdasAcessorias_db': 'Perdas_Acessórias_Linha(db)',\n",
     "}\n",
     "\n",
     "PROJECTION_SRD = {\n",
@@ -309,17 +319,16 @@
     "\t'NumServico': 1.0,\n",
     "\t'DataValFreq': '$habilitacao.DataValFreq',\n",
     "\t'state': '$Status.state',\n",
-    "\t# \"PotenciaTransmissorWatts\": 1.0,\n",
-    "\t# \"CodTipoAntena\": 1.0,\n",
-    "\t# \"Polarizacao\": 1.0,\n",
-    "\t# \"RaioAntena\": 1.0,\n",
-    "\t# \"GanhoAntena\": 1.0,\n",
-    "\t# \"FrenteCostaAntena\": 1.0,\n",
-    "\t# \"AnguloMeiaPotenciaAntena\": 1.0,\n",
-    "\t# \"AnguloElevacao\": 1.0,\n",
-    "\t# \"Azimute\": 1.0,\n",
-    "\t# \"AlturaAntena\": 1.0,\n",
-    "\t# \"PerdasAcessorias\": 1.0,\n",
+    "\t'MedCotaBaseTorre': '$estacao.MedCotaBaseTorre',\n",
+    "\t'hpat': 1,\n",
+    "\t'MedPotenciaOperacao': '$equipamento.transmissor.MedPotenciaOperacao',\n",
+    "\t'MedGMaxdBd': '$antena.principal.MedGMaxdBd',\n",
+    "\t'MedBeamTilt': '$antena.principal.MedBeamTilt',\n",
+    "\t'MedOrientNV': '$antena.principal.MedOrientNV',\n",
+    "\t'IndPolariz': '$antena.principal.IndPolariz',\n",
+    "\t'MedHCI': '$antena.principal.MedHCI',\n",
+    "\t'MedAtenLinhaTransmissaodB100m': '$linhatransmissao.principal.MedAtenLinhaTransmissaodB100m',\n",
+    "\t'PerdasAcessorias_db': '$linhatransmissao.principal.PerdasAcessorias_db',\n",
     "}\n",
     "\n",
     "DICT_LICENCIAMENTO = {\n",
@@ -339,17 +348,16 @@
     "\t'Latitude': 'Latitude',\n",
     "\t'Longitude': 'Longitude',\n",
     "\t'DesignacaoEmissao': 'Designação_Emissão',\n",
-    "\t'PotenciaTransmissorWatts': 'Potência(W)',\n",
-    "\t'CodTipoAntena': 'Cod_Tipo_Antena',\n",
-    "\t'Polarizacao': 'Polarização',\n",
-    "\t# \"RaioAntena\": \"Raio_Antena\",\n",
-    "\t'GanhoAntena': 'Ganho_Antena',\n",
-    "\t'FrenteCostaAntena': 'FC_Antena',\n",
-    "\t'AnguloMeiaPotenciaAntena': 'Ang_MP_Antena',\n",
-    "\t'AnguloElevacao': 'Ângulo_Elevação',\n",
-    "\t'Azimute': 'Azimute',\n",
-    "\t'AlturaAntena': 'Altura_Antena',\n",
-    "\t'PerdasAcessorias': 'Perdas_Acessorias',\n",
+    "\t# 'PotenciaTransmissorWatts': 'Potência_Transmissor(W)',\n",
+    "\t# 'CodTipoAntena': 'Cod_Tipo_Antena',\n",
+    "\t# 'Polarizacao': 'Polarização_Antena',\n",
+    "\t# 'GanhoAntena': 'Ganho_Antena',\n",
+    "\t# 'FrenteCostaAntena': 'FC_Antena',\n",
+    "\t# 'AnguloMeiaPotenciaAntena': 'Ang_MP_Antena',\n",
+    "\t# 'AnguloElevacao': 'Ângulo_Elevação_Antena',\n",
+    "\t# 'Azimute_Antena': 'Azimute_Antena',\n",
+    "\t# 'AlturaAntena': 'Altura_Antena',\n",
+    "\t# 'PerdasAcessorias': 'Perdas_Acessorias',\n",
     "}\n",
     "\n",
     "PROJECTION_LICENCIAMENTO = {k: 1.0 for k in DICT_LICENCIAMENTO}"
@@ -508,7 +516,7 @@
     "\t\t{'frequency': {'$nin': [None, '', 0], '$type': 1.0}},\n",
     "\t\t{'srd_planobasico.CodMunicipio': {'$nin': [None, '']}},\n",
     "\t\t{'NumFistel': {'$nin': [None, '']}},\n",
-    "\t\t# {\"habilitacao.DataValFreq\": {\"$nin\": [None, \"\"]}},\n",
+    "\t\t# {'habilitacao.DataValFreq': {'$nin': [None, '']}},\n",
     "\t]\n",
     "}\n",
     "\n",
