--- a/nbs/01d_mosaico.ipynb
+++ b/nbs/01d_mosaico.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "MONGO_URI: str = os.environ.get('MONGO_URI')\n"
+    "MONGO_URI: str = os.environ.get(\"MONGO_URI\")"
    ]
   },
   {
@@ -101,47 +101,59 @@
    "source": [
     "# | export\n",
     "class Mosaico(Base, GetAttr):\n",
-    "\tdef __init__(self, mongo_uri: str = MONGO_URI):\n",
-    "\t\tself.database = 'sms'\n",
-    "\t\tself.default = MongoDB(mongo_uri)\n",
+    "    def __init__(self, mongo_uri: str = MONGO_URI):\n",
+    "        self.database = \"sms\"\n",
+    "        self.default = MongoDB(mongo_uri)\n",
     "\n",
-    "\t@property\n",
-    "\tdef collection(self):\n",
-    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'collection'\")\n",
+    "    @property\n",
+    "    def collection(self):\n",
+    "        raise NotImplementedError(\n",
+    "            \"Subclasses devem implementar a propriedade 'collection'\"\n",
+    "        )\n",
     "\n",
-    "\t@property\n",
-    "\tdef query(self):\n",
-    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'query'\")\n",
+    "    @property\n",
+    "    def query(self):\n",
+    "        raise NotImplementedError(\"Subclasses devem implementar a propriedade 'query'\")\n",
     "\n",
-    "\t@property\n",
-    "\tdef projection(self):\n",
-    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'projection'\")\n",
+    "    @property\n",
+    "    def projection(self):\n",
+    "        raise NotImplementedError(\n",
+    "            \"Subclasses devem implementar a propriedade 'projection'\"\n",
+    "        )\n",
     "\n",
-    "\tdef _extract(self, collection: str, pipeline: list):\n",
-    "\t\tclient = self.connect()\n",
-    "\t\tdatabase = client[self.database]\n",
-    "\t\tcollection = database[collection]\n",
-    "\t\tdtype = 'string[pyarrow]' if self.stem == 'srd' else 'category'\n",
-    "\t\tdf = pd.DataFrame([c for c in collection.aggregate(pipeline)], copy=False, dtype=dtype)\n",
-    "\t\t# Substitui strings vazias e somente com espaços por nulo\n",
-    "\t\treturn df.replace(r'^\\s*$', pd.NA, regex=True)\n",
+    "    def _extract(self, collection: str, pipeline: list):\n",
+    "        client = self.connect()\n",
+    "        database = client[self.database]\n",
+    "        collection = database[collection]\n",
+    "        dtype = \"string[pyarrow]\" if self.stem == \"srd\" else \"category\"\n",
+    "        df = pd.DataFrame(\n",
+    "            [c for c in collection.aggregate(pipeline)], copy=False, dtype=dtype\n",
+    "        )\n",
+    "        # Substitui strings vazias e somente com espaços por nulo\n",
+    "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
     "\n",
-    "\t@staticmethod\n",
-    "\tdef split_designacao(\n",
-    "\t\tdf: pd.DataFrame,  # DataFrame com coluna original DesignacaoEmissao\n",
-    "\t) -> pd.DataFrame:  # DataFrame com novas colunas Largura_Emissão(kHz) e Classe_Emissão\n",
-    "\t\t\"\"\"Parse a bandwidth string\n",
-    "\t\tIt returns the numerical component and a character class\n",
-    "\t\t\"\"\"\n",
-    "\t\tdf['Designação_Emissão'] = (\n",
-    "\t\t\tdf['Designação_Emissão'].str.replace(',', ' ').str.strip().str.upper().str.split(' ')\n",
-    "\t\t)\n",
-    "\t\tdf = df.explode('Designação_Emissão')\n",
-    "\t\tdf = df[df['Designação_Emissão'] != '/']  # Removes empty rows\n",
-    "\t\t# Apply the parse_bw function\n",
-    "\t\tparsed_data = zip(*df['Designação_Emissão'].apply(Base.parse_bw))\n",
-    "\t\tdf['Largura_Emissão(kHz)'], df['Classe_Emissão'] = parsed_data\n",
-    "\t\treturn df.drop('Designação_Emissão', axis=1)"
+    "    @staticmethod\n",
+    "    def split_designacao(\n",
+    "        df: pd.DataFrame,  # DataFrame com coluna original DesignacaoEmissao\n",
+    "    ) -> (\n",
+    "        pd.DataFrame\n",
+    "    ):  # DataFrame com novas colunas Largura_Emissão(kHz) e Classe_Emissão\n",
+    "        \"\"\"Parse a bandwidth string\n",
+    "        It returns the numerical component and a character class\n",
+    "        \"\"\"\n",
+    "        df[\"Designação_Emissão\"] = (\n",
+    "            df[\"Designação_Emissão\"]\n",
+    "            .str.replace(\",\", \" \")\n",
+    "            .str.strip()\n",
+    "            .str.upper()\n",
+    "            .str.split(\" \")\n",
+    "        )\n",
+    "        df = df.explode(\"Designação_Emissão\")\n",
+    "        df = df[df[\"Designação_Emissão\"] != \"/\"]  # Removes empty rows\n",
+    "        # Apply the parse_bw function\n",
+    "        parsed_data = zip(*df[\"Designação_Emissão\"].apply(Base.parse_bw))\n",
+    "        df[\"Largura_Emissão(kHz)\"], df[\"Classe_Emissão\"] = parsed_data\n",
+    "        return df.drop(\"Designação_Emissão\", axis=1)"
    ]
   },
   {
