--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "from extracao.constants import (\n",
     "\tBW_MAP,\n",
-    "\tCOLUNAS,\n",
+    "\tCOLS_SRD,\n",
     "\tDICT_SRD,\n",
     "\tMONGO_SRD,\n",
     "\tPROJECTION_SRD,\n",
@@ -111,8 +111,9 @@
     "class SRD(Mosaico):\n",
     "\t\"\"\"Classe para encapsular a lógica de extração de Radiodifusão\"\"\"\n",
     "\n",
-    "\tdef __init__(self, mongo_uri: str = MONGO_URI) -> None:\n",
+    "\tdef __init__(self, mongo_uri: str = MONGO_URI, limit: int = 0) -> None:\n",
     "\t\tsuper().__init__(mongo_uri)\n",
+    "\t\tself.limit = limit\n",
     "\n",
     "\t@property\n",
     "\tdef stem(self):\n",
@@ -132,19 +133,16 @@
     "\n",
     "\t@property\n",
     "\tdef columns(self):\n",
-    "\t\treturn COLUNAS\n",
+    "\t\treturn COLS_SRD\n",
     "\n",
     "\t@property\n",
     "\tdef cols_mapping(self):\n",
     "\t\treturn DICT_SRD\n",
     "\n",
     "\tdef extraction(self) -> pd.DataFrame:\n",
-    "\t\tpipeline = [\n",
-    "\t\t\t# match the documents that satisfy your query\n",
-    "\t\t\t{'$match': self.query},\n",
-    "\t\t\t# project the fields that you want to keep\n",
-    "\t\t\t{'$project': self.projection},\n",
-    "\t\t]\n",
+    "\t\tpipeline = [{'$match': self.query}, {'$project': self.projection}]\n",
+    "\t\tif self.limit > 0:\n",
+    "\t\t\tpipeline.append({'$limit': self.limit})\n",
     "\t\tdf = self._extract(self.collection, pipeline)\n",
     "\t\t# df.loc[df[\"estacao\"] == \"[]\", \"estacao\"] = \"{}\"\n",
     "\t\t# cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
@@ -178,11 +176,20 @@
     "\t\t].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
     "\t\tdf['Frequência'] = df['Frequência'].astype('float')\n",
     "\t\tdf['Validade_RF'] = df.Validade_RF.astype('string').str.slice(0, 10)\n",
-    "\t\tdf['Fonte'] = 'MOSAICO'\n",
+    "\t\tdf['Fonte'] = 'MOSAICO-SRD'\n",
     "\t\tdf['Num_Serviço'] = df['Num_Serviço'].fillna('')\n",
     "\t\tdf['Designação_Emissão'] = df.Num_Serviço.astype('string').fillna('').map(BW_MAP)\n",
     "\t\tdf = self.split_designacao(df)\n",
     "\t\tdf['Multiplicidade'] = 1\n",
+    "\t\tdf['Padrão_Antena(dBd)'] = df['Padrão_Antena(dBd)'].str.replace('None', '0')\n",
+    "\t\tdf['Potência_Transmissor(W)'] = pd.to_numeric(\n",
+    "\t\t\tdf['Potência_Transmissor(W)'], errors='coerce'\n",
+    "\t\t).astype(float)\n",
+    "\t\tdf['Potência_Transmissor(W)'] = (\n",
+    "\t\t\tdf['Potência_Transmissor(W)']\n",
+    "\t\t\t.apply(lambda x: float(Decimal(1000) * Decimal(x)))\n",
+    "\t\t\t.astype(float)\n",
+    "\t\t)\n",
     "\t\t# self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
     "\t\treturn df.loc[:, self.columns]\n"
    ]
