--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "from extracao.constants import (\n",
     "\tAGG_LICENCIAMENTO,\n",
-    "\tCOLS_LICENCIAMENTO,\n",
+    "\tCOLUNAS,\n",
     "\tDICT_LICENCIAMENTO,\n",
     "\tMONGO_TELECOM,\n",
     "\tPROJECTION_LICENCIAMENTO,\n",
@@ -133,7 +133,7 @@
     "\n",
     "\t@property\n",
     "\tdef columns(self):\n",
-    "\t\treturn COLS_LICENCIAMENTO\n",
+    "\t\treturn COLUNAS\n",
     "\n",
     "\t@property\n",
     "\tdef cols_mapping(self):\n",
@@ -170,8 +170,7 @@
     "\t\tlog = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
     "\t\tdf_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
     "\t\tdf_sub['Status'] = 'L'\n",
-    "\t\tdf_sub['Fonte'] = 'MOSAICO'\n",
-    "\n",
+    "\t\tdf_sub['Fonte'] = 'MOSAICO-LICENCIAMENTO'\n",
     "\t\treturn df_sub.loc[:, self.columns]\n"
    ]
   },
@@ -182,6 +181,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "# | export# | export\n",
+    "# | export# | export\n",
     "# | export# | export\n",
     "# | export"
    ]
