--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -57,7 +57,7 @@
     "from extracao.constants import (\n",
     "\tAGG_SMP,\n",
     "\tCHANNELS,\n",
-    "\tCOLS_LICENCIAMENTO,\n",
+    "\tCOLUNAS,\n",
     "\tDICT_LICENCIAMENTO,\n",
     "\tIBGE_MUNICIPIOS,\n",
     "\tMONGO_SMP,\n",
@@ -141,7 +141,7 @@
     "\n",
     "\t@property\n",
     "\tdef columns(self):\n",
-    "\t\treturn COLS_LICENCIAMENTO\n",
+    "\t\treturn COLUNAS\n",
     "\n",
     "\t@property\n",
     "\tdef cols_mapping(self):\n",
@@ -183,8 +183,6 @@
     "\t\tdf_sub['Multiplicidade'] = (\n",
     "\t\t\tdf.groupby(AGG_SMP, dropna=True, sort=False, observed=True).size().values\n",
     "\t\t)\n",
-    "\t\tdf_sub['Status'] = 'L'\n",
-    "\t\tdf_sub['Fonte'] = 'MOSAICO'\n",
     "\t\tlog = f'[(\"Colunas\", {AGG_SMP}), (\"Processamento\", \"Agrupamento\")]'\n",
     "\t\treturn self.register_log(df_sub, log, df_sub['Multiplicidade'] > 1)\n",
     "\n",
@@ -317,7 +315,7 @@
     "\t\tdf['Status'] = 'L'\n",
     "\t\tdf['Num_Serviço'] = '010'\n",
     "\t\tdown = df.drop('Frequência_Recepção', axis=1)\n",
-    "\t\tdown['Fonte'] = 'MOSAICO'\n",
+    "\t\tdown['Fonte'] = 'MOSAICO-LICENCIAMENTO'\n",
     "\t\tdown['Classe'] = 'FB'\n",
     "\t\tup = df.drop('Frequência', axis=1)\n",
     "\t\tup = up.rename(columns={'Frequência_Recepção': 'Frequência'})\n",
