--- a/nbs/02c_aisgeo.ipynb
+++ b/nbs/02c_aisgeo.ipynb
@@ -91,39 +91,39 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "LINK_VOR = 'https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:vor&outputFormat=application%2Fjson'\n",
-    "LINK_DME = 'https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:dme&outputFormat=application%2Fjson'\n",
-    "LINK_NDB = 'https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:ndb&outputFormat=application%2Fjson'\n",
+    "LINK_VOR = \"https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:vor&outputFormat=application%2Fjson\"\n",
+    "LINK_DME = \"https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:dme&outputFormat=application%2Fjson\"\n",
+    "LINK_NDB = \"https://geoaisweb.decea.mil.br/geoserver/ICA/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=ICA:ndb&outputFormat=application%2Fjson\"\n",
     "COLS_VOR = (\n",
-    "\t'properties.frequency',\n",
-    "\t'properties.frequnits',\n",
-    "\t'properties.latitude',\n",
-    "\t'properties.longitude',\n",
-    "\t'properties.tipo',\n",
-    "\t'properties.txtname',\n",
-    "\t'properties.txtrmk',\n",
+    "    \"properties.frequency\",\n",
+    "    \"properties.frequnits\",\n",
+    "    \"properties.latitude\",\n",
+    "    \"properties.longitude\",\n",
+    "    \"properties.tipo\",\n",
+    "    \"properties.txtname\",\n",
+    "    \"properties.txtrmk\",\n",
     ")\n",
     "COLS_NDB = (\n",
-    "\t'properties.valfreq',\n",
-    "\t'properties.uomfreq',\n",
-    "\t'properties.geolat',\n",
-    "\t'properties.geolong',\n",
-    "\t'properties.tipo',\n",
-    "\t'properties.txtname',\n",
-    "\t'properties.txtrmk',\n",
+    "    \"properties.valfreq\",\n",
+    "    \"properties.uomfreq\",\n",
+    "    \"properties.geolat\",\n",
+    "    \"properties.geolong\",\n",
+    "    \"properties.tipo\",\n",
+    "    \"properties.txtname\",\n",
+    "    \"properties.txtrmk\",\n",
     ")\n",
     "\n",
     "COLS_DME = (\n",
-    "\t'properties.valchannel',\n",
-    "\t'properties.codechanne',\n",
-    "\t'properties.geolat',\n",
-    "\t'properties.geolong',\n",
-    "\t'properties.tipo',\n",
-    "\t'properties.txtname',\n",
-    "\t'Channel',\n",
+    "    \"properties.valchannel\",\n",
+    "    \"properties.codechanne\",\n",
+    "    \"properties.geolat\",\n",
+    "    \"properties.geolong\",\n",
+    "    \"properties.tipo\",\n",
+    "    \"properties.txtname\",\n",
+    "    \"Channel\",\n",
     ")\n",
     "\n",
-    "UNIQUE_COLS = ['Frequência', 'Latitude', 'Longitude']\n"
+    "UNIQUE_COLS = [\"Frequência\", \"Latitude\", \"Longitude\"]"
    ]
   },
   {
@@ -134,21 +134,21 @@
    "source": [
     "#| export\n",
     "def convert_frequency(\n",
-    "\tfreq: float,  # Frequência Central da emissão\n",
-    "\tunit: str,  # Unidade da Frequência: [Hz, kHz, MHZ, GHZ]\n",
+    "    freq: float,  # Frequência Central da emissão\n",
+    "    unit: str,  # Unidade da Frequência: [Hz, kHz, MHZ, GHZ]\n",
     ") -> float:  # Frequência em MHz\n",
-    "\t\"\"\"Converte a frequência `freq` para MHz\"\"\"\n",
-    "\tunit = unit.upper()\n",
-    "\tif unit == 'GHZ':\n",
-    "\t\treturn freq * 1000\n",
-    "\telif unit == 'KHZ':\n",
-    "\t\treturn freq / 1000\n",
-    "\telif unit == 'HZ':\n",
-    "\t\treturn freq / 1e6\n",
-    "\telif unit == 'MHZ':\n",
-    "\t\treturn freq\n",
-    "\telse:\n",
-    "\t\treturn -1\n"
+    "    \"\"\"Converte a frequência `freq` para MHz\"\"\"\n",
+    "    unit = unit.upper()\n",
+    "    if unit == \"GHZ\":\n",
+    "        return freq * 1000\n",
+    "    elif unit == \"KHZ\":\n",
+    "        return freq / 1000\n",
+    "    elif unit == \"HZ\":\n",
+    "        return freq / 1e6\n",
+    "    elif unit == \"MHZ\":\n",
+    "        return freq\n",
+    "    else:\n",
+    "        return -1"
    ]
   },
   {
@@ -159,27 +159,29 @@
    "source": [
     "#| export\n",
     "def _process_frequency(\n",
-    "\tdf: pd.DataFrame,  # Dataframe com os dados\n",
-    "\tcols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
+    "    df: pd.DataFrame,  # Dataframe com os dados\n",
+    "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
     ") -> pd.DataFrame:  # Dataframe com os dados de frequência devidamente processados\n",
-    "\tif cols == COLS_DME:\n",
-    "\t\tdf_channels = pd.read_csv(VOR_ILS_DME, dtype='string', dtype_backend='pyarrow')\n",
-    "\t\tdf = df.dropna(subset=[cols[0]])\n",
-    "\t\tdf['Channel'] = df[cols[0]].astype('int').astype('string') + df[cols[1]]\n",
-    "\t\tdf['Frequência'] = -1.0\n",
+    "    if cols == COLS_DME:\n",
+    "        df_channels = pd.read_csv(VOR_ILS_DME, dtype=\"string\", dtype_backend=\"pyarrow\")\n",
+    "        df = df.dropna(subset=[cols[0]])\n",
+    "        df[\"Channel\"] = df[cols[0]].astype(\"int\").astype(\"string\") + df[cols[1]]\n",
+    "        df[\"Frequência\"] = -1.0\n",
     "\n",
-    "\t\tfor row in df.itertuples(index=True):\n",
-    "\t\t\trow_match = df_channels.loc[(df_channels.Channel == row.Channel), 'DMEground']\n",
-    "\t\t\tif not row_match.empty:\n",
-    "\t\t\t\tdf.loc[row.Index, 'Frequência'] = float(row_match.item())\n",
+    "        for row in df.itertuples(index=True):\n",
+    "            row_match = df_channels.loc[\n",
+    "                (df_channels.Channel == row.Channel), \"DMEground\"\n",
+    "            ]\n",
+    "            if not row_match.empty:\n",
+    "                df.loc[row.Index, \"Frequência\"] = float(row_match.item())\n",
     "\n",
-    "\telse:\n",
-    "\t\tdf['Frequência'] = (\n",
-    "\t\t\tdf[[cols[0], cols[1]]]\n",
-    "\t\t\t.apply(lambda x: convert_frequency(x.iloc[0], x.iloc[1]), axis=1)\n",
-    "\t\t\t.astype('float')\n",
-    "\t\t)\n",
-    "\treturn df\n"
+    "    else:\n",
+    "        df[\"Frequência\"] = (\n",
+    "            df[[cols[0], cols[1]]]\n",
+    "            .apply(lambda x: convert_frequency(x.iloc[0], x.iloc[1]), axis=1)\n",
+    "            .astype(\"float\")\n",
+    "        )\n",
+    "    return df"
    ]
   },
   {
@@ -190,16 +192,18 @@
    "source": [
     "#| export\n",
     "def _filter_df(df, cols):  # sourcery skip: use-fstring-for-concatenation\n",
-    "\tdf.fillna('', inplace=True)\n",
-    "\tdf['Entidade'] = (df[cols[4]] + ' - ' + df[cols[5]] + ' ' + df[cols[6]]).astype('string')\n",
-    "\tdf['Fonte'] = 'AISGEO'\n",
-    "\tdf = df[['Frequência', cols[2], cols[3], 'Entidade', 'Fonte']]\n",
-    "\treturn df.rename(\n",
-    "\t\tcolumns={\n",
-    "\t\t\tcols[2]: 'Latitude',\n",
-    "\t\t\tcols[3]: 'Longitude',\n",
-    "\t\t}\n",
-    "\t)\n"
+    "    df.fillna(\"\", inplace=True)\n",
+    "    df[\"Entidade\"] = (df[cols[4]] + \" - \" + df[cols[5]] + \" \" + df[cols[6]]).astype(\n",
+    "        \"string\"\n",
+    "    )\n",
+    "    df[\"Fonte\"] = \"AISGEO\"\n",
+    "    df = df[[\"Frequência\", cols[2], cols[3], \"Entidade\", \"Fonte\"]]\n",
+    "    return df.rename(\n",
+    "        columns={\n",
+    "            cols[2]: \"Latitude\",\n",
+    "            cols[3]: \"Longitude\",\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -210,20 +214,27 @@
    "source": [
     "#|export\n",
     "def get_geodf(\n",
-    "\tlink: str,  # Link para a requisição das estações VOR do GEOAISWEB\n",
-    "\tcols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
-    ") -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações VOR\n",
-    "\t# sourcery skip: use-fstring-for-concatenation\n",
-    "\t\"\"\"Faz a requisição do `link`, processa o json e o retorna como Dataframe\"\"\"\n",
-    "\tresponse = urlopen(link)\n",
-    "\tif response.status != 200 or 'application/json' not in response.headers['content-type']:\n",
-    "\t\traise ValueError(f'Resposta a requisição não foi bem sucedida: {response.status=}')\n",
-    "\tdata_json = json.loads(response.read())\n",
-    "\tdf = pd.json_normalize(\n",
-    "\t\tdata_json['features'],\n",
-    "\t).filter(cols, axis=1)\n",
-    "\tdf = _process_frequency(df, cols)\n",
-    "\treturn _filter_df(df, cols)\n"
+    "    link: str,  # Link para a requisição das estações VOR do GEOAISWEB\n",
+    "    cols: List[str],  # Subconjunto de Colunas relevantes do DataFrame\n",
+    ") -> (\n",
+    "    pd.DataFrame\n",
+    "):  # DataFrame com frequências, coordenadas e descrição das estações VOR\n",
+    "    # sourcery skip: use-fstring-for-concatenation\n",
+    "    \"\"\"Faz a requisição do `link`, processa o json e o retorna como Dataframe\"\"\"\n",
+    "    response = urlopen(link)\n",
+    "    if (\n",
+    "        response.status != 200\n",
+    "        or \"application/json\" not in response.headers[\"content-type\"]\n",
+    "    ):\n",
+    "        raise ValueError(\n",
+    "            f\"Resposta a requisição não foi bem sucedida: {response.status=}\"\n",
+    "        )\n",
+    "    data_json = json.loads(response.read())\n",
+    "    df = pd.json_normalize(\n",
+    "        data_json[\"features\"],\n",
+    "    ).filter(cols, axis=1)\n",
+    "    df = _process_frequency(df, cols)\n",
+    "    return _filter_df(df, cols)"
    ]
   },
   {
@@ -1012,12 +1023,14 @@
    "source": [
     "#| export\n",
     "def get_aisg() -> pd.DataFrame:  # DataFrame com todos os dados do GEOAISWEB\n",
-    "\t\"\"\"Lê e processa os dataframes individuais da API GEOAISWEB e retorna o conjunto concatenado\"\"\"\n",
-    "\tdf = pd.concat(\n",
-    "\t\tget_geodf(link, cols)\n",
-    "\t\tfor link, cols in zip([LINK_NDB, LINK_VOR, LINK_DME], [COLS_NDB, COLS_VOR, COLS_DME])\n",
-    "\t)\n",
-    "\treturn df.astype('string').drop_duplicates(UNIQUE_COLS, ignore_index=True)"
+    "    \"\"\"Lê e processa os dataframes individuais da API GEOAISWEB e retorna o conjunto concatenado\"\"\"\n",
+    "    df = pd.concat(\n",
+    "        get_geodf(link, cols)\n",
+    "        for link, cols in zip(\n",
+    "            [LINK_NDB, LINK_VOR, LINK_DME], [COLS_NDB, COLS_VOR, COLS_DME]\n",
+    "        )\n",
+    "    )\n",
+    "    return df.astype(\"string\").drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   }
  ],
