--- a/nbs/04_estacoes.ipynb
+++ b/nbs/04_estacoes.ipynb
@@ -50,9 +50,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import shutil\n",
     "import urllib.request\n",
-    "from functools import cached_property\n",
     "from typing import List\n",
     "from zipfile import ZipFile\n",
     "\n",
@@ -63,14 +61,15 @@
     "from fastcore.parallel import parallel\n",
     "from fastcore.xtras import Path\n",
     "\n",
-    "from extracao.constants import COLUNAS, IBGE_MUNICIPIOS, IBGE_POLIGONO, MALHA_IBGE\n",
+    "from extracao.constants import COLS_SRD, IBGE_MUNICIPIOS, IBGE_POLIGONO, MALHA_IBGE\n",
     "from extracao.datasources.aeronautica import Aero\n",
     "from extracao.datasources.base import Base\n",
     "from extracao.datasources.mosaico import MONGO_URI\n",
     "from extracao.datasources.sitarweb import SQLSERVER_PARAMS, Radcom, Stel\n",
     "from extracao.datasources.smp import SMP\n",
     "from extracao.datasources.srd import SRD\n",
-    "from extracao.datasources.telecom import Telecom"
+    "from extracao.datasources.telecom import Telecom\n",
+    "from extracao.format import merge_on_frequency"
    ]
   },
   {
@@ -116,49 +115,52 @@
     "\t\tsql_params: dict = SQLSERVER_PARAMS,\n",
     "\t\tmongo_uri: str = MONGO_URI,\n",
     "\t\tlimit: int = 0,\n",
+    "\t\tparallel: bool = True,\n",
     "\t):\n",
     "\t\tself.sql_params = sql_params\n",
     "\t\tself.mongo_uri = mongo_uri\n",
     "\t\tself.limit = limit\n",
+    "\t\tself.parallel = parallel\n",
+    "\t\tself.init_data_sources()\n",
     "\n",
     "\t@property\n",
     "\tdef columns(self):\n",
-    "\t\treturn COLUNAS\n",
+    "\t\treturn COLS_SRD\n",
     "\n",
-    "\t@cached_property\n",
-    "\tdef df_cache(self) -> pd.DataFrame:\n",
-    "\t\ttry:\n",
-    "\t\t\tdf = self._read(self.stem)\n",
-    "\t\texcept ValueError:\n",
-    "\t\t\tdf = pd.DataFrame(columns=self.columns)\n",
-    "\t\treturn df\n",
+    "\tdef build_from_sources(self) -> pd.DataFrame:\n",
+    "\t\treturn self._format([s.df() for s in self.sources.values()])\n",
     "\n",
     "\t@property\n",
     "\tdef stem(self):\n",
     "\t\treturn 'anatel'\n",
     "\n",
     "\t@staticmethod\n",
-    "\tdef _update_instance(class_instance):\n",
+    "\tdef _update_source(class_instance):\n",
     "\t\tclass_instance.update()\n",
     "\t\tclass_instance.save()\n",
-    "\t\treturn class_instance.df\n",
+    "\t\treturn class_instance\n",
+    "\n",
+    "\tdef init_data_sources(self):\n",
+    "\t\tself.sources = {\n",
+    "\t\t\t'telecom': Telecom(self.mongo_uri, self.limit),\n",
+    "\t\t\t'smp': SMP(self.mongo_uri, self.limit),\n",
+    "\t\t\t'srd': SRD(self.mongo_uri),\n",
+    "\t\t\t'stel': Stel(self.sql_params),\n",
+    "\t\t\t'radcom': Radcom(self.sql_params),\n",
+    "\t\t\t'aero': Aero(),\n",
+    "\t\t}\n",
     "\n",
     "\tdef extraction(self) -> L:\n",
-    "\t\tsources = [\n",
-    "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
-    "\t\t\tSMP(self.mongo_uri, self.limit),\n",
-    "\t\t\tSRD(self.mongo_uri),\n",
-    "\t\t\tStel(self.sql_params),\n",
-    "\t\t\tRadcom(self.sql_params),\n",
-    "\t\t\tAero(),\n",
-    "\t\t]\n",
-    "\t\t# result = L()\n",
-    "\t\t# for s in sources:\n",
-    "\t\t# \tresult.append(Estacoes._update_instance(s))\n",
-    "\n",
-    "\t\t# return result\n",
-    "\n",
-    "\t\treturn parallel(Estacoes._update_instance, sources, n_workers=len(sources), progress=True)\n",
+    "\t\tif self.parallel:\n",
+    "\t\t\tsources = parallel(\n",
+    "\t\t\t\tEstacoes._update_source,\n",
+    "\t\t\t\tself.sources.values(),\n",
+    "\t\t\t\tn_workers=len(self.sources),\n",
+    "\t\t\t\tprogress=True,\n",
+    "\t\t\t)\n",
+    "\t\telse:\n",
+    "\t\t\tsources = L(self._update_source(s) for s in self.sources.values())\n",
+    "\t\treturn sources.attrgot('df')\n",
     "\n",
     "\t@staticmethod\n",
     "\tdef verify_shapefile_folder():\n",
@@ -275,11 +277,10 @@
     "\t\tself,\n",
     "\t\tdfs: List,  # List with the individual API sources\n",
     "\t) -> pd.DataFrame:  # Processed DataFrame\n",
-    "\t\taero = self.validate_coordinates(dfs.pop(), False)\n",
-    "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
-    "\t\tdf = pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
-    "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
-    "\t\t)\n",
+    "\t\taero = dfs.pop()\n",
+    "\t\tanatel = pd.concat(dfs, ignore_index=True)\n",
+    "\t\tdf = self.validate_coordinates(merge_on_frequency(anatel, aero))\n",
+    "\t\tdf.sort_values(['Frequência', 'Latitude', 'Longitude'], ignore_index=True, inplace=True)\n",
     "\t\treturn df.loc[:, self.columns]"
    ]
   },
